<resources>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">lo</string>
    <string name="app_name" translatable="false">What2Play</string>
    <string name="go_to_add_artist">Add Artist</string>
    <string name="go_to_add_song">Add Song</string>
    <string name="loading_database">Loading database...</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="english">English</string>
    <string name="French">French</string>
    <string name="langue">Language</string>
    <string name="apply">Apply</string>
    <string name="back">Return</string>
    <string name="gender">Gender</string>
    <string name="artist">Artist</string>
    <string name="name">Name</string>
    <string name="song_name">Song Name</string>
    <string name="song_link">Song Link</string>
    <string name="artist_name">Artist Name</string>
    <string name="home_button">Home</string>
    <string name="previous_buttons">Previous</string>
    <string name="listen_question_description">Listen to these 3 previews\nAnd choose the one you like the most.</string>
    <string name="validate_buttons">Validate</string>
    <string name="urban_music_title">Urban Music</string>
    <string name="live_music_title">\"Live\" Music</string>
    <string name="electronic_instrumental_music_title">Electronic / Instrumental Music</string>
    <string name="rapimage">RapImage</string>
    <string name="rap_description" translatable="false">Boom Bap, West Coast, Trap, Cloud Rap</string>
    <string name="livemusicimage">LiveMusicImage</string>
    <string name="live_music_description" translatable="false">Rock, Jazz, Metal, Blues</string>
    <string name="electronicimagedescription">ElectronicImageDescription</string>
    <string name="electronic_instrumental_description" translatable="false">House, EDM, Lo-Fi, Synthwave</string>
    <string name="play_on_spotify">Play on Spotify</string>
    <string name="share">Share</string>
    <string name="spinnerQuestionTitle">Click and choose a mood</string>
    <string name="spinnerCouple" translatable="false">[couple]</string>
    <string name="boom_bap_emoji" translatable="false">🎤</string>
    <string name="cloud_rap_emoji" translatable="false">🌫️</string>
    <string name="empty_rank_chip_emoji" translatable="false">◌</string>
    <string name="trap_emoji" translatable="false">💥</string>
    <string name="west_coast_emoji" translatable="false">🌴</string>
    <string name="emoji_description">Tap the emojis in order of preference</string>
    <string name="choose_preview_n_1">Choose Preview 1</string>
    <string name="choose_preview_n_2">Choose Preview 2</string>
    <string name="choose_preview_n_3">Choose Preview 3</string>
    <string name="maximum" translatable="false">Maximum</string>
    <string name="minimum" translatable="false">Minimum</string>
    <string name="insert_question_title">INSERT QUESTION TITLE</string>
    <string name="artist_template">[Artist]</string>
    <string name="swipe_activity_description">Swipe to the left if you don\'t like this artist  \nSwipe to the right if you like this artist</string>
    <string name="swipe_activity_title">Choose your favorite artists</string>
    <string name="slider_question_title">Choose your mix between the two genres</string>
    <string name="finished">Finished</string>
    <string name="invalid_spinner_mode">Invalid spinner mode</string>
    <string name="genres_not_found_database">Genres not found in database</string>
    <string name="selected_genres_preview">Selected genres: %1$s / %2$s</string>
    <string name="spinner_question_title">Choose the mood you\'re into right now</string>
    <string name="unknown_spinner_mode">Unknown spinner mode</string>
    <string name="no_valid_genre_selection">No valid genre selection</string>

    <string name="spinner_live_option_1">Smooth and expressive</string>
    <string name="spinner_live_option_2">Powerful and intense</string>

    <string name="spinner_electro_option_1">Energetic, danceable</string>
    <string name="spinner_electro_option_2">Chill</string>
    <string name="spinner_electro_option_3">Retro</string>
</resources>