<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenreActivity">

    <Button
        android:id="@+id/buttonPrevious3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickPrevious3"
        android:text="@string/previous_buttons"
        app:layout_constraintBottom_toBottomOf="@+id/buttonHome3"
        app:layout_constraintEnd_toStartOf="@+id/buttonHome3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonHome3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="clickHome3"
        android:text="@string/home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonValidate3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickValidate3"
        android:text="@string/validate_buttons"
        app:layout_constraintBottom_toBottomOf="@+id/buttonHome3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonHome3" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonHome3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/card3linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Card3Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/electronic_instrumental_music_title"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/card3Image"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:contentDescription="@string/electronicimagedescription"
                        app:srcCompat="@drawable/instrumentals" />

                    <TextView
                        android:id="@+id/card3description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/electronic_instrumental_description"
                        android:textAlignment="center"
                        android:textSize="12sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/card2linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Card2Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/live_music_title"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/card2Image"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:contentDescription="@string/livemusicimage"
                        app:srcCompat="@drawable/live" />

                    <TextView
                        android:id="@+id/card2description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/live_music_description"
                        android:textAlignment="center"
                        android:textSize="12sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/card1linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Card1Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/urban_music_title"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/card1Image"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:contentDescription="@string/rapimage"
                        app:srcCompat="@drawable/rap" />

                    <TextView
                        android:id="@+id/card1description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rap_description"
                        android:textAlignment="center"
                        android:textSize="12sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

</androidx.constraintlayout.widget.ConstraintLayout>